<resources>
    <string name="app_name">Grand Rapids Tour Guide App</string>
    <string name="category_cafes">Coffee shops and cafes</string>
    <string name="category_hotel">Hotels</string>
    <string name="category_top_attract">Top Attractions</string>
    <string name="category_festivals">Breweries</string>
    <string name="category_breweries">Festivals</string>
    <string name="one_hotel_name">Amway Grand Plaza Hotel</string>
    <string name="one_hotel_desc">The historic Amway Grand Plaza is a true destination in the heart of downtown Grand Rapids. It melds history, modernity, restaurants and river views into a single experience.</string>
    <string name="one_hotel_addr">187 Monroe Ave NW,Grand Rapids, MI 49503</string>
    <string name="one_hotel_work">Open 24 Hours</string>
    <string name="one_hotel_tel">+1(616)774-2000</string>
    <string name="one_hotel_site">https://amwaygrand.com/</string>
    <string name="two_hotel_name">JW Marriott Grand Rapids</string>
    <string name="two_hotel_desc">Refined lodging connected to a convention center, offering a spa, American dining and an indoor pool.</string>
    <string name="two_hotel_addr">235 Louis St NW, Grand Rapids, MI 49503</string>
    <string name="two_hotel_work">Open 24 Hours</string>
    <string name="two_hotel_tel">+1(616)242-1500</string>
    <string name="two_hotel_site">https://www.marriott.com/hotels/travel/grrjw-jw-marriott-grand-rapids/?scid=bb1a189a-fec3-4d19-a255-54ba596febe2</string>
    <string name="three_hotel_name">Homewood Suites by Hilton</string>
    <string name="three_hotel_desc">Casual suites, some with city views, in a 19th-century property with a rooftop bar and an indoor pool.</string>
    <string name="three_hotel_addr">161 Ottawa Ave NW, Grand Rapids, MI 49503</string>
    <string name="three_hotel_work">Open 24 Hours</string>
    <string name="three_hotel_tel">+1(616)451-2300</string>
    <string name="three_hotel_site">https://homewoodsuites3.hilton.com/en/hotels/michigan/homewood-suites-by-hilton-grand-rapids-downtown-GRRDOHW/index.html</string>
    <string name="four_hotel_name">Holiday Inn Grand Rapids Downtown</string>
    <string name="four_hotel_desc">Modern lodging with an indoor pool, fitness center and on-site restaurant, plus free WiFi and parking.</string>
    <string name="four_hotel_addr">10 Pearl St NW, Grand Rapids, MI 49504</string>
    <string name="four_hotel_work">Open 24 Hours</string>
    <string name="four_hotel_tel">+1(616)235-7611</string>
    <string name="four_hotel_site">https://www.booking.com/hotel/ua/hostel-chemodan-2-odessa.ru.html</string>
    <string name="five_hotel_name">City Flats Hotel</string>
    <string name="five_hotel_desc">Modern hotel offering stylish rooms, plus a hip cocktail lounge and a market-driven bistro.</string>
    <string name="five_hotel_addr">83 Monroe Center St NW, Grand Rapids, MI 49503</string>
    <string name="five_hotel_work">Open 24 Hours</string>
    <string name="five_hotel_tel">+1(616)608-1720</string>
    <string name="five_hotel_site">http://cityflatshotel.com/</string>
    <string name="six_hotel_name">Grand River Hotel</string>
    <string name="six_hotel_desc">Modest quarters in a riverfront hotel with dining and an indoor pool, plus a free area shuttle.</string>
    <string name="six_hotel_addr">270 Ann St NW, Grand Rapids, MI 49504</string>
    <string name="six_hotel_work">Open 24 Hours</string>
    <string name="six_hotel_tel">+1(616)363-9001</string>
    <string name="six_hotel_site">https://www.choicehotels.com/michigan/grand-rapids/ascend-hotels/mi423?source=gyxt</string>
    <string name="five_cafe_name">Mayan Buzz Café</string>
    <string name="five_cafe_desc">Our coffee house has a Central American theme and an international flair with its culturally diverse environment and philanthropic goals.</string>
    <string name="five_cafe_addr">208 Grandville Ave SW, Grand Rapids, MI 49503</string>
    <string name="five_cafe_work">6:00 A.M. - 9:00 P.M.</string>
    <string name="five_cafe_tel">+1(616)608-3052</string>
    <string name="five_cafe_site">http://mayanbuzzcafe.com/</string>
    <string name="two_cafe_name">Lantern Coffee Bar and Lounge</string>
    <string name="two_cafe_desc">Are you like the guy in the picture shown with crazy bedhead? Need some coffee to jolt you awake? Enjoy this loftlike coffee shop offering locally roasted beans, snacks and pastries, plus live entertainment.</string>
    <string name="two_cafe_addr">100 Commerce Ave SW, Grand Rapids, MI 49503</string>
    <string name="two_cafe_work">6:00 A.M. - 10:00 P.M.</string>
    <string name="two_cafe_tel">+1(616)920-0209</string>
    <string name="two_cafe_site">http://lanterncoffee.com/</string>
    <string name="three_cafe_name">Rising Grinds Café</string>
    <string name="three_cafe_desc">Rising Grinds Café began in 2014 as a coffee training center for young adults as part of the Grand Rapids Center for Community Transformation.  There we served a simple food and coffee menu to students and staff of GRCCT, focusing mainly on customer service skills and identifying our niche in the neighborhood.</string>
    <string name="three_cafe_addr">1167 Madison Ave SE, Grand Rapids, MI 49507</string>
    <string name="three_cafe_work">8:00 A.M. - 2:00 P.M.</string>
    <string name="three_cafe_tel">+1(616)427-3900 </string>
    <string name="three_cafe_site">https://www.rgcafe.org/</string>
    <string name="four_cafe_name">The Sparrows Coffee, Tea, and Newsstand</string>
    <string name="four_cafe_desc">Cozy cafe in a historic building offering fair trade coffee, tea, locally baked goods and periodicals.</string>
    <string name="four_cafe_addr">1035 Wealthy St SE, Grand Rapids, MI 49506</string>
    <string name="four_cafe_work">6:30 A.M. - 8:00 P.M.</string>
    <string name="four_cafe_tel">+1(616)608-3375</string>
    <string name="four_cafe_site">https://www.thesparrowsgr.com/</string>
    <string name="one_cafe_name">Happy Cat Cafe</string>
    <string name="one_cafe_desc">Sip Coffee, Save Cats. West Michigans first cat cafe is the purr-fect place to relax. Enjoy a cup of coffee and hang out with adoptable cats!</string>
    <string name="one_cafe_addr">447 Division Ave S, Grand Rapids, MI 49503</string>
    <string name="one_cafe_work">12:00 P.M. - 8:00 P.M. </string>
    <string name="one_cafe_tel">+1(616)202-4750</string>
    <string name="one_cafe_site">https://www.happycatcompany.com/</string>
    <string name="one_fam_name">Frederik Meijer Gardens</string>
    <string name="one_fam_desc">Frederik Meijer Gardens and Sculpture Park is a 158-acre botanical garden and outdoor sculpture park located in Grand Rapids Township, Kent County, Michigan, United States.</string>
    <string name="one_fam_addr">1000 E Beltline Ave NE, Grand Rapids, MI 49525</string>
    <string name="one_fam_work">9:00 A.M. - 5:00 P.M.</string>
    <string name="one_fam_tel">+1(616)957-1580</string>
    <string name="one_fam_site">https://www.meijergardens.org/</string>
    <string name="two_fam_name">John Ball Zoo</string>
    <string name="two_fam_desc">John Ball Zoological Garden is an urban park located on the west side of the city of Grand Rapids, Michigan, United States. The John Ball Zoo is situated on the ravines and bluffs along the west edge of the park. The zoo houses a variety of animals from around the world and is a significant regional attraction.</string>
    <string name="two_fam_addr">1300 Fulton St W, Grand Rapids, MI 49504</string>
    <string name="two_fam_work">9:00 A.M. - 4:00 P.M.</string>
    <string name="two_fam_tel">+1(616)336-4300</string>
    <string name="two_fam_site">https://www.jbzoo.org/</string>
    <string name="three_fam_name">Millennium Park</string>
    <string name="three_fam_desc">Millennium Park is the largest urban park in West Michigan, located on the southwest side of Grand Rapids. Millennium Park connects four of the major cities in the area together, including Grand Rapids, Wyoming, Grandville, and Walker.</string>
    <string name="three_fam_addr">1415 Maynard Ave SW, Walker, MI 49534</string>
    <string name="three_fam_work">Open 24 Hours</string>
    <string name="three_fam_tel">+1(616)791-2357</string>
    <string name="three_fam_site">https://www.kentcountyparks.org/millennium/</string>
    <string name="four_fam_name">Grand Rapids Public Museum</string>
    <string name="four_fam_desc">Museum offers 3 floors of history in an ex-flour mill plus exhibits, a 1928 carousel and planetarium.</string>
    <string name="four_fam_addr">272 Pearl St NW, Grand Rapids, MI 49504</string>
    <string name="four_fam_work">9:00 A.M. - 5:00 P.M.</string>
    <string name="four_fam_tel">+1(616)929-1700</string>
    <string name="four_fam_site">https://www.grpm.org/</string>
    <string name="five_fam_name">The Gerald Ford Presidential Museum</string>
    <string name="five_fam_desc">The Gerald R. Ford Presidential Museum is the presidential museum and burial site of Gerald Ford, the 38th President of the United States, and his wife Betty Ford. It is located near the Pew Campus of Grand Valley State University in Grand Rapids, Michigan.</string>
    <string name="five_fam_addr">303 Pearl St NW, Grand Rapids, MI 49504</string>
    <string name="five_fam_work">9:00 A.M. - 5:00 P.M.</string>
    <string name="five_fam_tel">+1(616)254-0400</string>
    <string name="five_fam_site">https://www.fordlibrarymuseum.gov/</string>
    <string name="one_fest_name">Grand Rapids Balloon Festival</string>
    <string name="one_fest_desc">Hot Air Balloons are the oldest human-carrying flight technology and RE/MAX is proud to be sharing the beauty of these aircrafts with Grand Rapids residents.</string>
    <string name="one_fest_addr">4362 Cascade Rd SE #208, Grand Rapids, MI 49546</string>
    <string name="one_fest_work">July 18, 2019 from 4:00 P.M.-9:00 P.M.</string>
    <string name="one_fest_tel">+1(616)957-0700</string>
    <string name="one_fest_site">https://www.facebook.com/remaxofgrandrapidsballoonfestival/</string>
    <string name="two_fest_name">Gildas Laughfest</string>
    <string name="two_fest_desc">LaughFest is a fest that is made for all of us, and that is a good thing. We could all use more laughter.</string>
    <string name="two_fest_addr">1806 Bridge St NW, Grand Rapids, MI 49504</string>
    <string name="two_fest_work">9:00 A.M. - 6:00 P.M.</string>
    <string name="two_fest_tel">+1(616)735-4242</string>
    <string name="two_fest_site">https://www.laughfestgr.org/</string>
    <string name="three_fest_name">Grand Rapids Greek Festival</string>
    <string name="three_fest_desc">Grand Rapids greatest cultural event, featuring live music, homemade food and pastries, cooking lessons, dance demonstrations, and a full bar!</string>
    <string name="three_fest_addr">330 Lakeside Dr NE, Grand Rapids, MI 49503</string>
    <string name="three_fest_work">August 16-18, 2019 All-Day</string>
    <string name="three_fest_tel">+1(616)454-6563</string>
    <string name="three_fest_site">https://www.grgreekfest.com/</string>
    <string name="one_brew_name">Grand Rapids Brewing Co.</string>
    <string name="one_brew_desc">Organic ales and a menu of locally sourced pub grub served in a rustic setting with reclaimed wood.</string>
    <string name="one_brew_addr">1 Ionia Ave SW, Grand Rapids, MI 49503</string>
    <string name="one_brew_work">11:00 A.M. - 12:00 A.M.</string>
    <string name="one_brew_tel">+1(616)458-7000</string>
    <string name="one_brew_site">https://grbrewingcompany.com</string>
    <string name="two_brew_name">Brewery Vivant</string>
    <string name="two_brew_desc">Evocative brewery in a former chapel featuring tours and a pub offering craft beers and French fare.</string>
    <string name="two_brew_addr">925 Cherry St SE, Grand Rapids, MI 49506</string>
    <string name="two_brew_work">3:00 P.M. - 11:00 P.M.</string>
    <string name="two_brew_tel">+1(616)719-1604</string>
</resources>