<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tan_background"
        android:orientation="vertical"
        tools:context="com.s.liza.tourguideappgrandrapids.MainActivity">


        <TextView
            android:id="@+id/hotel"
            style="@style/CategoryStyle"
            android:background="@color/category_hotel"
            android:text="@string/category_hotel" />

        <TextView
            android:id="@+id/cafes"
            style="@style/CategoryStyle"
            android:background="@color/category_cafes"
            android:text="@string/category_cafes" />

        <TextView
            android:id="@+id/top_attract"
            style="@style/CategoryStyle"
            android:background="@color/category_top_attract"
            android:text="@string/category_top_attract" />

        <TextView
            android:id="@+id/festivals"
            style="@style/CategoryStyle"
            android:background="@color/category_festivals"
            android:text="@string/category_festivals" />

        <TextView
            android:id="@+id/breweries"
            style="@style/CategoryStyle"
            android:background="@color/category_breweries"
            android:text="@string/category_breweries" />

    </LinearLayout>
</ScrollView>
